# netkat

./: .gitignore  .travis.yml  Makefile  README.md  TODO  dune-project  dune-workspace  index.html  index.mld  nerode.opam  netkat.opam
_build/: .db  .digest-db  .to-delete-in-source-tree  log
_build/default/: META.nerode  nerode.dune-package  nerode.install  nerode.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: .merlin  alphabet.mli  dfa.ml  dfa.mli  intrx.ml  nerode.cma  nerode.cmxa  nerode.cmxs  nerode.ml-gen  nfa.ml  nfa.mli  rx.mli  rx_lexer.ml  rx_parser.ml  rx_parser.mli  rx_parser__mock.ml.mock  rx_parser__mock.mli.inferred
_build/default/lib/.merlin-conf/: lib-nerode
_build/default/lib/.nerode.objs/: alphabet.ml.d  alphabet.mli.d  dfa.ml.d  dfa.mli.d  fa.ml.d  intalph.ml.d  intrx.ml.d  nerode__Alphabet.intf.all-deps  nerode__Dfa.impl.all-deps  nerode__Dfa.intf.all-deps  nerode__Intrx.impl.all-deps  nerode__Nfa.impl.all-deps  nerode__Nfa.intf.all-deps  nerode__Parser.impl.all-deps  nerode__Rx.intf.all-deps  nerode__Rx_lexer.impl.all-deps  nerode__Rx_parser.impl.all-deps  nfa.ml.d  nfa.mli.d  parser.ml.d  rx.ml.d  rx.mli.d  rx_lexer.ml.d  rx_parser.ml.d  rx_parser.mli.d  rx_parser__mock.ml.mock.d
_build/default/lib/.nerode.objs/byte/: nerode.cmi  nerode.cmo  nerode.cmt  nerode__Alphabet.cmi  nerode__Alphabet.cmo  nerode__Alphabet.cmt  nerode__Alphabet.cmti  nerode__Dfa.cmi  nerode__Dfa.cmo  nerode__Dfa.cmt  nerode__Dfa.cmti  nerode__Fa.cmi  nerode__Fa.cmo  nerode__Fa.cmt  nerode__Intalph.cmi  nerode__Intalph.cmo  nerode__Intalph.cmt  nerode__Intrx.cmi  nerode__Intrx.cmo  nerode__Intrx.cmt  nerode__Nfa.cmi  nerode__Nfa.cmo  nerode__Nfa.cmt  nerode__Nfa.cmti  nerode__Parser.cmi  nerode__Parser.cmo  nerode__Parser.cmt  nerode__Rx.cmi  nerode__Rx.cmo  nerode__Rx.cmt  nerode__Rx.cmti  nerode__Rx_lexer.cmi  nerode__Rx_lexer.cmo  nerode__Rx_lexer.cmt  nerode__Rx_parser.cmi  nerode__Rx_parser.cmo  nerode__Rx_parser.cmt  nerode__Rx_parser.cmti
_build/default/lib/.nerode.objs/native/: nerode.cmx  nerode__Alphabet.cmx  nerode__Dfa.cmx  nerode__Fa.cmx  nerode__Intalph.cmx  nerode__Intrx.cmx  nerode__Nfa.cmx  nerode__Parser.cmx  nerode__Rx.cmx  nerode__Rx_lexer.cmx  nerode__Rx_parser.cmx
config-parsing/: routes.ml
examples/: equiv_broken_1.katbb  equiv_broken_2.katbb
examples/scratch/: bench.nkpl  jj.nkpl  test.nkpl  test2.nkpl
lib/: alphabet.ml  alphabet.mli  deb.ml  dfa.ml  dfa.mli  dune  fa.ml  index.mld  intNfa.ml  intalph.ml  nfa.ml  nfa.mli  parser.ml  rx.ml  rx.mli  rx_lexer.mll  rx_parser.mly
lib/netkat/: deriv.ml  deriv.mli  dune  env.ml  env.mli  field.ml  field.mli  interp.ml  interp.mli  nk.ml  nk.mli  nka.ml  nka.mli  nkcmd.ml  nkcmd.mli  nkexp.ml  nkexp.mli  nkpl_lexer.ml  nkpl_parser.mly  pk.ml  pk.mli  pkpair.ml  pkpair.mli  prTrace.ml  route.ml  route_lexer.ml  route_parser.mly  routes.ml  sp.ml  sp.ml.orig  sp.mli  spp.ml  spp.ml.orig  spp.mli  sts.ml  sts.mli  trace.ml  trace.mli  value.ml  value.mli  (+1 more)
lib/regular/: alphabet.mli  dfa.mli  dune  nfa.ml  nfa.mli  rx.mli  word.ml  word.mli
netkat/: index.html
netkat/Dllist/: index.html
netkat/Kat/: index.html
netkat/Kat__Ast/: index.html
netkat/Kat__Hom/: index.html
netkat/Kat__Optimize/: index.html
netkat/Katbb_lib/: index.html
netkat/Katbb_lib__Ast/: index.html
netkat/Katbb_lib__Idd_compiler/: index.html
netkat/Katbb_lib__Lexer/: index.html
netkat/Katbb_lib__Menhir_parser/: index.html
netkat/Katbb_lib__Parser/: index.html
netkat/Katbbv_lib/: index.html
netkat/Katbbv_lib__Ast/: index.html
nkpl/: b.nkpl
scratch/: import.nkpl  regr.nkpl
test/: dune  test.ml
(+2762 files in other folders)
