opam-version: "2.0"
name: "NetKAT"
version: "0.1"
synopsis: "Clean slate implementation of the NetKAT core language"
maintainer: "Steffen Smolka <smolka@cs.cornell.edu>"
authors: "Steffen Smolka <smolka@cs.cornell.edu>, Nate Foster <jnfoster@cs.cornell.edu>"
license: "MIT"
homepage: "https://github.com/netkat-lang/netkat"
dev-repo: "git+https://github.com/netkat-lang/netkat.git"
bug-reports: "https://github.com/netkat-lang/netkat/issues"


build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]

depends: [
  "dune" {build}
  "base"
  "core"
  "idds"
  "ppx_jane"
  "ppx_inline_test"
]
