(menhir (modules nkpl_parser route_parser) (flags --explain --inspection --table --dump))

(env
  (dev
    (flags (:standard -warn-error -A))))

(library
  (name nerode_netkat)
  (public_name nerode.netkat)
  (preprocess (pps sedlex.ppx))
  (libraries core_unix yojson menhirLib sedlex))

(documentation
  (package nerode)
  (mld_files :standard))
