(menhir (modules nkpl_parser) (flags --explain --inspection --table --dump))

(env
  (dev
    (flags (:standard -warn-error -A))))

(library
  (name netkat_netkat)
  (public_name netkat.netkat)
  (instrumentation (backend landmarks))
  (preprocess (pps landmarks-ppx sedlex.ppx))
  (libraries landmarks unix yojson menhirLib sedlex))

(documentation
  (package netkat)
  (mld_files :standard))
